Fix more markbot errors

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <ul class="skip-links">
     <li><a href="#nav">Skip to navigation</a></li>
     <li><a href="#main">Skip to main content</a></li>
-    <li><a href="contentinfo">Skip to footer</a></li>
+    <li><a href="#contentinfo">Skip to footer</a></li>
   </ul>
   <header role="banner">
     <nav role="navigation" class="style">
-      <input type="checkbox" class="nav-check" id="nav-check">
       <label class="nav-label" for="nav-check">
+        <input type="checkbox" class="nav-check" id="nav-check">
         <img class="nav-open" src="images/hamburger-01.svg" alt="">
         <img class="nav-close" src="images/close.svg" alt="">
       </label>
@@ -89,10 +89,10 @@
   </main>
   <footer role="contentinfo" class="grid-foot">
     <div class="icon mail">
-      <img src="images/mail.svg" alt="">
+      <img src="images/mail.svg" alt="email">
     </div>
     <div class="icon instagram">
-      <a href="https://www.instagram.com/sara.sherrer/"><img src="images/instagram.svg" alt=""></a>
+      <a href="https://www.instagram.com/sara.sherrer/"><img src="images/instagram.svg" alt="instagram"></a>
     </div>
   </footer>
 </body>
