Add more pictures to the file

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" href="favicon-196.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -52,7 +54,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>This was a first year typography assignment where we had to marry a photograph to the typoraphy work. I went for a creepy look that reflected the undulating effects of the branches from the photograph taken overhead a shrub in the winter.</p>
           <div class="popup" id="img-1">
             <div class="popup-content">
               <img src="images/sherrer-sara-expressing-the-unspoken.jpg" alt="">
@@ -68,7 +70,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>This first year typography assignment tasked us with making boring repetitive information more visually appealing through the use of typography and illustrations.</p>
           <div class="popup" id="img-2">
             <div class="popup-content">
               <img src="images/stephen-king-1.jpg" alt="">
@@ -84,7 +86,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>A first year typography assignment.</p>
           <div class="popup" id="img-3">
             <div class="popup-content">
               <img src="images/sara-sherrer-week-2-layout-final-2000.jpg" alt="">
@@ -100,7 +102,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>A first year graphic design assignment where we needed to design a poster for a play hosted by Algonquin College.</p>
           <div class="popup" id="img-4">
             <div class="popup-content">
               <img src="images/tea-bag-final-2.jpg" alt="">
