--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" href="favicon-196.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -31,15 +33,15 @@
     <div class="logo">
       <img class="logo logo-sized" src="images/image.svg" alt="logo">
     </div>
-    <div>
-      <img src="images/sokka-and-ang-2.jpg" alt="">
+    <div class="cropped">
+      <img src="images/winter-banner.jpg" alt="">
     </div>
   </header>
   <main role="main" id="main" tabindex="0">
     <section class="front">
       <div class="flex">
         <div class="about">
-          <p>placeholder for about me section LOL why is this not working!?</p>
+          <p>My name is Sara Sherrer. I'm a new graphic designer in the Ottawa region. I have been practicing art since I'm young, but only recently did I decide to persue it as a carreer. Feel free to look through my online portfolio. I hope you find something that catches your eye.</p>
         </div>
 
         <article class="section">
