--- a/traditional-design.html
+++ b/traditional-design.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" href="favicon-196.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -33,28 +35,55 @@
     </div>
   </header>
 
-
-
-
-
   <main role="main" id="main" tabindex="0">
     <section class="front">
       <div class="flex">
         <div class="about">
-          <p>Here is my traditional artwork that has been done in school, for clients and others.</p>
+          <p>Here is my traditional artwork that has been done in school, for clients, but mostely for myself at this point in time.</p>
         </div>
         <article class="section">
+          <h2>King Tut</h2>
+          <a class="button" href="#img-t-tut">
+            <div class="relative">
+              <img class="img relative" src="images/tut-icon.jpg" alt="">
+              <p class="absolute">click to expand</p>
+            </div>
+          </a>
+          <p>King Tutankamon is an icon in the ejyptology world and has always had a special place in my heart. This mixed media piece is made with acrylic and watercolour inks.</p>
+          <div class="popup" id="img-t-tut">
+            <div class="popup-content">
+              <img src="images/tut.jpg" alt="">
+              <a href="#" class="close">x</a>
+            </div>
+          </div>
+        </article><article class="section">
           <h2>jelly fish</h2>
           <a class="button" href="#img-t-5">
             <div class="relative">
               <img class="img relative" src="images/jelly-fish-icon.jpg" alt="">
-              <p class="absolute">click to expand</p>
+              <p class="absolute">Click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>A watercolour painting of a jelly fish.</p>
           <div class="popup" id="img-t-5">
             <div class="popup-content">
               <img src="images/jelly-fish.jpg" alt="">
+              <a href="#" class="close">x</a>
+            </div>
+          </div>
+        </article>
+        <article class="section">
+          <h2>My happy place</h2>
+          <a class="button" href="#img-t-sea">
+            <div class="relative">
+              <img class="img relative" src="images/sea-icon.jpg" alt="">
+              <p class="absolute">Click to expand</p>
+            </div>
+          </a>
+          <p>A traditional watercolour painting of a beach on cotton paper</p>
+          <div class="popup" id="img-t-sea">
+            <div class="popup-content">
+              <img src="images/sea.jpg" alt="">
               <a href="#" class="close">x</a>
             </div>
           </div>
@@ -67,7 +96,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>A watercolour painting of morning glories in bloom.</p>
           <div class="popup" id="img-4">
             <div class="popup-content">
               <img src="images/morning-glory.jpg" alt="">
@@ -80,10 +109,10 @@
           <a class="button" href="#img-t-1">
             <div class="relative">
               <img class="img relative" src="images/peacock-modded-icon.jpg" alt="">
-              <p class="absolute">click to expand</p>
+              <p class="absolute">Click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>A mixed media piece of a peacock bird. Made with acrylics and watercolour.</p>
           <div class="popup" id="img-t-1">
             <div class="popup-content">
               <img src="images/peacock-modded.jpg" alt="">
@@ -99,7 +128,7 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>I do not own avatar the last airbender. I'm just the biggest fan. This representation of Nickelodeon's Avatar is recreated with watercolour inks</p>
           <div class="popup" id="img-t-2">
             <div class="popup-content">
               <img src="images/sokka-and-ang-2.jpg" alt="">
@@ -115,10 +144,26 @@
               <p class="absolute">click to expand</p>
             </div>
           </a>
-          <p>Descriptive solution.</p>
+          <p>I do not own avatar the last airbender. I'm just the biggest fan. This representation of Nickelodeon's Avatar is recreated with watercolour inks</p>
           <div class="popup" id="img-t-3">
             <div class="popup-content">
               <img src="images/sokka.jpg" alt="">
+              <a href="#" class="close">x</a>
+            </div>
+          </div>
+        </article>
+        <article class="section">
+          <h2>Muffled Beauty</h2>
+          <a class="button" href="#img-t-6">
+            <div class="relative">
+              <img class="img relative" src="images/winter-icon.jpg" alt="">
+              <p class="absolute">click to expand</p>
+            </div>
+          </a>
+          <p>A watercolour painting of winter scenery. Painted uniquely with Daniel smith's phtalo blue.</p>
+          <div class="popup" id="img-t-6">
+            <div class="popup-content">
+              <img src="images/winter.jpg" alt="">
               <a href="#" class="close">x</a>
             </div>
           </div>
