Fix grammar mistake

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="front">
       <div class="flex">
         <div class="about">
-          <p>My name is Sara Sherrer. I'm a new graphic designer in the Ottawa region. I have been practicing art since I'm young, but only recently did I decide to persue it as a carreer. Feel free to look through my online portfolio. I hope you find something that catches your eye.</p>
+          <p>My name is Sara Sherrer. I'm a new graphic designer in the Ottawa region. I have been practicing art since I'm young, but only recently did I decide to persue it as a career. Feel free to look through my online portfolio. I hope you find something that catches your eye.</p>
         </div>
 
         <article class="section">
