Fix markbot errors

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -41,12 +41,11 @@
 
   <main role="main" id="main" tabindex="0">
     <section class="front">
-      <div class="flex">
-        <div class="about">
-          <p>Here is my graphic design work that has been done in school, for clients and others. This list comprises of all electronic art as well.</p>
-        </div>
-
-        <article class="section">
+      <div class="about">
+        <p>Here is my graphic design work that has been done in school, for clients and others. This list comprises of all electronic art as well.</p>
+      </div>
+      <div class="grid-large">
+        <article class="grid-small">
           <h2>Expressing the unspoken</h2>
           <a class="button" href="#img-1">
             <div class="relative">
@@ -62,7 +61,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Biography.com</h2>
           <a class="button" href="#img-2">
             <div class="relative">
@@ -78,7 +77,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Web Design</h2>
           <a class="button" href="#img-3">
             <div class="relative">
@@ -94,7 +93,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Tea Rules</h2>
           <a class="button" href="#img-4">
             <div class="relative">
