--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -34,17 +34,16 @@
       <img class="logo logo-sized" src="images/image.svg" alt="logo">
     </div>
     <div class="cropped">
-      <img src="images/winter-banner.jpg" alt="">
+      <img src="images/winter-banner.jpg" alt="watercolour painting">
     </div>
   </header>
   <main role="main" id="main" tabindex="0">
     <section class="front">
-      <div class="flex">
-        <div class="about">
-          <p>My name is Sara Sherrer. I'm a new graphic designer in the Ottawa region. I have been practicing art since I'm young, but only recently did I decide to persue it as a career. Feel free to look through my online portfolio. I hope you find something that catches your eye.</p>
-        </div>
-
-        <article class="section">
+      <div class="about">
+        <p>My name is Sara Sherrer. I'm a new graphic designer in the Ottawa region. I have been practicing art since I'm young, but only recently did I decide to persue it as a career. Feel free to look through my online portfolio. I hope you find something that catches your eye.</p>
+      </div>
+      <div class="grid-large">
+        <article class="grid-small">
           <h2>Traditional Art</h2>
           <a class="button" href="#img-popup-td-main">
             <div class="relative">
@@ -54,10 +53,10 @@
           </a>
           <p>Follow this link to see a compilation of the traditional art that I have done over the many years I have been practicing art. My prefered media are acrylics, watercolour inks and mixed media.</p>
           <div class="center">
-            <a class="btn" href="#">Traditional Art</a>
+            <a class="btn" href="traditional-design.html">Traditional Art</a>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Design School</h2>
           <a class="button hover" href="#img-popup-gd-main">
             <div class="relative">
@@ -67,7 +66,8 @@
           </a>
           <p>Follow this link to see a compilation of design work that I have completed through school and through comissions. This includes typography work, graphic design as well as digital art.</p>
           <div class="center">
-            <a class="btn" href="#">Design School</a>
+            <a class="btn" href="graphic-design.html">Graphic Design</a>
+
           </div>
         </article>
       </div>
