--- a/traditional-design.html
+++ b/traditional-design.html
@@ -37,11 +37,11 @@
 
   <main role="main" id="main" tabindex="0">
     <section class="front">
-      <div class="flex">
-        <div class="about">
-          <p>Here is my traditional artwork that has been done in school, for clients, but mostely for myself at this point in time.</p>
-        </div>
-        <article class="section">
+      <div class="about">
+        <p>Here is my traditional artwork that has been done in school, for clients, but mostely for myself at this point in time.</p>
+      </div>
+      <div class="grid-large">
+        <article class="grid-small">
           <h2>King Tut</h2>
           <a class="button" href="#img-t-tut">
             <div class="relative">
@@ -56,7 +56,7 @@
               <a href="#" class="close">x</a>
             </div>
           </div>
-        </article><article class="section">
+        </article><article class="grid-small">
           <h2>jelly fish</h2>
           <a class="button" href="#img-t-5">
             <div class="relative">
@@ -72,7 +72,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>My happy place</h2>
           <a class="button" href="#img-t-sea">
             <div class="relative">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Morning Glory</h2>
           <a class="button" href="#img-4">
             <div class="relative">
@@ -104,7 +104,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Peacock</h2>
           <a class="button" href="#img-t-1">
             <div class="relative">
@@ -120,7 +120,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Aang and Sokka</h2>
           <a class="button" href="#img-t-2">
             <div class="relative">
@@ -136,7 +136,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>What could possibly go wrong?</h2>
           <a class="button" href="#img-t-3">
             <div class="relative">
@@ -152,7 +152,7 @@
             </div>
           </div>
         </article>
-        <article class="section">
+        <article class="grid-small">
           <h2>Muffled Beauty</h2>
           <a class="button" href="#img-t-6">
             <div class="relative">
