Add pretty changes

--- a/traditional-design.html
+++ b/traditional-design.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -57,7 +58,7 @@
             </div>
           </div>
         </article><article class="grid-small">
-          <h2>jelly fish</h2>
+          <h2>Jelly Fish</h2>
           <a class="button" href="#img-t-5">
             <div class="relative">
               <img class="img relative" src="images/jelly-fish-icon.jpg" alt="">
