--- a/graphic-design.html
+++ b/graphic-design.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
-</head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <body>
   <ul class="skip-links">
     <li><a href="#nav">Skip to navigation</a></li>
@@ -49,7 +49,7 @@
           <h2>Expressing the unspoken</h2>
           <a class="button" href="#img-1">
             <div class="relative">
-              <img class="img relative" src="images/sherrer-sara-expressing-the-unspoken-icon.jpg" alt="">
+              <img class="img relative image-cropped-icons" src="images/sherrer-sara-expressing-the-unspoken-icon.jpg" alt="">
               <p class="absolute">click to expand</p>
             </div>
           </a>
